added preview content of first edition

--- a/preview_.html
+++ b/preview_.html
@@ -41,90 +41,115 @@
         </div>
     </div>
     <div class="grid-container">
+        <!-- 1 -->
 		<div >
 			<img src="images/algo.jpeg" height=100px width=200px><br>
 			<a class="anchor" href="articles/article1.html">Algoritmc Bias and Multi-Label Classification : Topics of Importance in Machine Learning and Data Science</a>
 			<p>Published By: Satchidananda Deduri,SIMEE</p>
 		</div>
-		<div>
-			<img src="images/data_pipelines.png" height=100px width=200px ><br>
-			<a class="anchor" href="Data_pipelines.html">Data Pipelines architecture and basic understanding</a>
-			<p> Published By: Lohit Ravi Teja Bhupati</p>
-		</div>
-		<div  >
-			<img src="images/time_series.jpeg" height=100px width=200px ><br>
-			<a class="anchor" href="time_series.html">Time Series Analysis of Satellite Images using Pixel-Set Encoders and Temporal self-Attention</a>
-			<p>Published By:p.AnanyaSahiki</p>
-		</div>
-		<div >
-			<img src="images/algoritm.jpeg" height=100px width=200px ><br>
-			<a class="anchor" href="algoritm.html" >Algorithm: The essence of computing Science</a>
-			<p>Published By:p.AnanyaSahiki</p>
-		</div>
-		<div>
-			<img src="images/Coding.jpeg" height=100px width=200px ><br>
-			<a class="anchor" href="coding.html" >Coding is not Everything A Software student Does..</a>
-			<p>Published By:Motupalli Vijaya Sai Priyanka </p>
-		</div>
-		<div>
-			<img src="images/iot.png" height=100px width=200px ><br>
-			<a class="anchor" href="algoritm.html">Analysis of auto Encoders for IOT Botnet Detection</a>
-			<p>Published By:Sai Vasanthi mandala</p>
-		</div>
-		<div>
-			<img src="images/predection.jpeg" height=100px width=200px><br>
-           <a class="anchor" href=" ">predicting next item interaction with session aware and session based recommendations systems</a>
-            <p>published by:S M YUNUS ANSARI</p>
-        </div>
-
-		<div >
-			<img src="images/art6img.jpeg" height=100px width=200px><br>
-			<a class="anchor" href="algorithmic basic.html " >Data Quality And Machine Learning : What is the Relationship?</a>
-			<p>Published By: Jitendra Yasaswi K</p>
-		</div>
-		<div >
-			<img src="images/art8img.jpeg" height=100px width=200px><br>
-			<a class="anchor" href="algorithmic basic.html " >What technology is driving Zepto’s 10- 18minute grocery delivery service?</a>
-			<p>Published By: Mediboina Sai Kumar</p>
-		</div>
-		<div >
-          <img src="images/meta.jpeg" height=100px width=200px><br>
-           <a class="anchor" href=" ">Hybrid similarity metrics for neighbor based collaborative filtering performance improvement</a>
-            <p>published by:mounsewari pentakota</p>
-        </div>
-        <div>
-        	<img src="images/churun.jpeg" height=100px width=200px><br>
-            <a class="anchor" href=" " >dynamis behaviour based customer churn prediction </a>
-            <p>published by:venkata rajat kumar vuppala</p>
-         </div>
-          <div id="at-1">
-        	<img src="images/enter.png" height=100px width=200px><br>
-            <a class="anchor" href=" " >Entrepreneurship – How I launched my new Startup </a>
-            <p>published by:Dr. Pratap Chillakanti</p>
-         </div>
-          <div>
-        	<img src="images/ec.png" height=100px width=200px><br>
-            <a class="anchor" href=" " style="text-decoration: none;">Campaigns using personalization and recommendations to boost revenue </a>
-            <p>published by:Vikram Gupta</p>
-         </div>
-         <div >
-        	<img src="images/lc.png" height=100px width=200px><br>
-            <a class="anchor" href=" " > Let’s face it </a>
-            <p>published by:Ch.Harshini</p>
-         </div>
-         <div >
-        	<img src="images/er.png" height=100px width=200px><br>
-            <a class="anchor" href=" " >Security Risks of Suspicious Data reduced by a Novel Model</a>
+        <!-- 2 -->
+        <div >
+            <img src="images/er.png" height=100px width=200px><br>
+            <a class="anchor" href="articles/article2.html" >Security Risks of Suspicious Data reduced by a Novel Model</a>
             <p>published by:Gullipalli Suneetha</p>
          </div>
-
-         <div>
-			<img src="images/art5img.jpeg" height=100px width=200px><br>
-			<a class="anchor" href="algorithmic basic.html " >About Hi-Track</a>
-			<p>Published By: BalaSai Charan Mamidi</p>
+         <!-- 3 -->
+         <div >
+            <img src="images/lc.png" height=100px width=200px><br>
+            <a class="anchor" href="articles/article3.html" > Let’s face it </a>
+            <p>published by:Ch.Harshini</p>
+         </div>
+         <!-- 4 -->
+		<div>
+			<img src="images/data_pipelines.png" height=100px width=200px ><br>
+			<a class="anchor" href="articles/article4.html">Data Pipelines architecture and basic understanding</a>
+			<p> Published By: Lohit Ravi Teja Bhupati</p>
 		</div>
-
-
+        <!-- 5 -->
+        <div>
+            <img src="images/art5img.jpeg" height=100px width=200px><br>
+            <a class="anchor" href="articles/article5.html" >About Hi-Track</a>
+            <p>Published By: BalaSai Charan Mamidi</p>
+        </div>
+         <!-- 6 -->
+        <div >
+            <img src="images/art6img.jpeg" height=100px width=200px><br>
+            <a class="anchor" href="articles/article6.html" >Data Quality And Machine Learning : What is the Relationship?</a>
+            <p>Published By: Jitendra Yasaswi K</p>
+        </div>
+        <!-- 7 -->
+        <div id="at-1">
+            <img src="images/enter.png" height=100px width=200px><br>
+            <a class="anchor" href="articles/article7.html" >Entrepreneurship – How I launched my new Startup </a>
+            <p>published by:Dr. Pratap Chillakanti</p>
+         </div>
+        <!-- 8 -->
+         <div >
+            <img src="images/art8img.jpeg" height=100px width=200px><br>
+            <a class="anchor" href="articles/article8.html" >What technology is driving Zepto’s 10- 18minute grocery delivery service?</a>
+            <p>Published By: Mediboina Sai Kumar</p>
+        </div>
+        <!-- 9 -->
+        <div>
+            <img src="images/Coding.jpeg" height=100px width=200px ><br>
+            <a class="anchor" href="articles/article9.html" >Coding is not Everything A Software student Does..</a>
+            <p>Published By:Motupalli Vijaya Sai Priyanka </p>
+        </div>
+        <!-- 10 -->
+        <div >
+            <img src="images/algoritm.jpeg" height=100px width=200px ><br>
+            <a class="anchor" href="articles/article10.html" >Algorithm: The essence of computing Science</a>
+            <p>Published By:Tirimula Rao Benala</p>
+        </div>
+        <!-- 11 -->
+        <div>
+            <img src="images/iot.png" height=100px width=200px ><br>
+            <a class="anchor" href="articles/article11.html">Analysis of auto Encoders for IOT Botnet Detection</a>
+            <p>Published By:Sai Vasanthi mandala</p>
+        </div>
+        <!-- 12 -->
+        <div>
+            <img src="images/predection.jpeg" height=100px width=200px><br>
+           <a class="anchor" href="articles/article12.html">predicting next item interaction with session aware and session based recommendations systems</a>
+            <p>published by:S M YUNUS ANSARI</p>
+        </div>
+        <!-- 13 -->
+        <div >
+          <img src="images/meta.jpeg" height=100px width=200px><br>
+           <a class="anchor" href="articles/article13.html">Hybrid similarity metrics for neighbor based collaborative filtering performance improvement</a>
+            <p>published by:mounsewari pentakota</p>
+        </div>
+        <!-- 14 -->
+		<div>
+			<img src="images/article-14.jpeg" height=100px width=200px ><br>
+			<a class="anchor" href="articles/article14.html">Automated wheelchair using IOT</a>
+			<p>Published By:Eswar Patnala</p>
+		</div>
+       <!-- 15 -->
+		<div>
+            <img src="images/time_series.jpeg" height=100px width=200px ><br>
+            <a class="anchor" href="articles/article15.html">Time Series Analysis of Satellite Images using Pixel-Set Encoders and Temporal self-Attention</a>
+            <p>Published By:p.AnanyaSahiki</p>
+        </div>
+        <!-- 16 --> 
+        <div>
+        	<img src="images/churun.jpeg" height=100px width=200px><br>
+            <a class="anchor" href="articles/article16.html" >dynamis behaviour based customer churn prediction </a>
+            <p>published by:venkata rajat kumar vuppala</p>
+         </div>
+         <!-- 17 -->
+          <div>
+        	<img src="images/ec.png" height=100px width=200px><br>
+            <a class="anchor" href="articles/article17.html" style="text-decoration: none;">Campaigns using personalization and recommendations to boost revenue </a>
+            <p>published by:Vikram Gupta</p>
+         </div>
+         <!-- 18 -->
+         <div>
+            <img src="images/article-18.jpeg" height=100px width=200px><br>
+            <a class="anchor" href="articles/article18.html" style="text-decoration: none;">Coding to get into MAANG (Meta, 
+            Amazon, Apple, Netflix, Google)</a>
+            <p>published by:Tharun Sai</p>
+         </div>
 
 	</div>
 </body>
